--- a/css/main.css
+++ b/css/main.css
@@ -118,7 +118,7 @@ a:hover {
 }
 .hash {
   float: left;
-  margin-left: -18px;
+  margin-left: -22px;
   font-weight: 400;
   color: rgba(0, 0, 0, .6);
 }
